build : 코딩스타일 설정
editorconfig 공통적으로 지원하는 코드 스타일에 대한 설정
gitattribute Git에서의 새줄라인 강제 LF 변환 설정

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,13 @@
 plugins {
     id 'java'
+    id 'org.ec4j.editorconfig' version '0.0.3'
 }
+
+editorconfig {
+    excludes = ['build']
+}
+
+check.dependsOn editorconfigCheck
 
 group 'camp.nextstep.edu'
 version '1.0.0'
